lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> START
Rule 1     START -> { START }
Rule 2     START -> START START
Rule 3     START -> ASSIGN_EXP ;
Rule 4     START -> IF_INSTR
Rule 5     START -> WHILE_INSTR
Rule 6     START -> FOR_INSTR
Rule 7     START -> PRINT_FUN
Rule 8     START -> RETURN_FUN ;
Rule 9     START -> BREAK ;
Rule 10    START -> CONTINUE ;
Rule 11    empty -> <empty>
Rule 12    VALUE_SINGLE -> INTNUM
Rule 13    VALUE_SINGLE -> FLOATNUM
Rule 14    VALUE_SINGLE -> ID '
Rule 15    VALUE_SINGLE -> ID
Rule 16    VALUE_SINGLE -> STRING
Rule 17    LIST_VALUE_SINGLE -> VALUE_SINGLE
Rule 18    LIST_VALUE_SINGLE -> VALUE_SINGLE , LIST_VALUE_SINGLE
Rule 19    MATRIX_ROW_LIST -> [ LIST_VALUE_SINGLE ] , MATRIX_ROW_LIST
Rule 20    MATRIX_ROW_LIST -> [ LIST_VALUE_SINGLE ] , [ LIST_VALUE_SINGLE ]
Rule 21    MATRIX -> [ MATRIX_ROW_LIST ]
Rule 22    MATRIX -> [ LIST_VALUE_SINGLE ]
Rule 23    MATRIX -> MATRIX '
Rule 24    VALUE -> VALUE_SINGLE
Rule 25    VALUE -> MATRIX
Rule 26    LIST_VALUE -> VALUE
Rule 27    LIST_VALUE -> VALUE , LIST_VALUE
Rule 28    ARITHMETIC_OP -> +
Rule 29    ARITHMETIC_OP -> -
Rule 30    ARITHMETIC_OP -> *
Rule 31    ARITHMETIC_OP -> /
Rule 32    ARITHMETIC_OP -> DOTADD
Rule 33    ARITHMETIC_OP -> DOTSUB
Rule 34    ARITHMETIC_OP -> DOTMUL
Rule 35    ARITHMETIC_OP -> DOTDIV
Rule 36    ASSIGN_OP -> ADDASSIGN
Rule 37    ASSIGN_OP -> SUBASSIGN
Rule 38    ASSIGN_OP -> MULASSIGN
Rule 39    ASSIGN_OP -> DIVASSIGN
Rule 40    ASSIGN_OP -> =
Rule 41    RELATION_OP -> LT
Rule 42    RELATION_OP -> GT
Rule 43    RELATION_OP -> LE
Rule 44    RELATION_OP -> GE
Rule 45    RELATION_OP -> NE
Rule 46    RELATION_OP -> EQ
Rule 47    ARTHMETIC_EXP -> VALUE
Rule 48    ARTHMETIC_EXP -> ARITHMETIC_OP_UNAR ARTHMETIC_EXP
Rule 49    ARTHMETIC_EXP -> ARTHMETIC_EXP ARITHMETIC_OP ARTHMETIC_EXP
Rule 50    ARTHMETIC_EXP -> ( ARTHMETIC_EXP )
Rule 51    ARTHMETIC_EXP -> EYE ( ARTHMETIC_EXP )
Rule 52    ARTHMETIC_EXP -> ZEROS ( ARTHMETIC_EXP )
Rule 53    ARTHMETIC_EXP -> ONES ( ARTHMETIC_EXP )
Rule 54    ARITHMETIC_OP_UNAR -> +
Rule 55    ARITHMETIC_OP_UNAR -> -
Rule 56    ARITHMETIC_OP_UNAR -> ARITHMETIC_OP_UNAR ARITHMETIC_OP_UNAR
Rule 57    RELATION_EXP -> ARTHMETIC_EXP RELATION_OP ARTHMETIC_EXP
Rule 58    RELATION_EXP -> ( RELATION_EXP )
Rule 59    ASSIGN_EXP -> ID ASSIGN_OP ARTHMETIC_EXP
Rule 60    ASSIGN_EXP -> ID [ LIST_VALUE ] ASSIGN_OP ARTHMETIC_EXP
Rule 61    IF_INSTR -> IF ( RELATION_EXP ) START
Rule 62    IF_INSTR -> IF ( RELATION_EXP ) START ELSE START
Rule 63    WHILE_INSTR -> WHILE ( RELATION_EXP ) START
Rule 64    FOR_INSTR -> FOR ID = ARTHMETIC_EXP : ARTHMETIC_EXP START
Rule 65    PRINT_FUN -> PRINT LIST_VALUE ;
Rule 66    RETURN_FUN -> RETURN LIST_VALUE ;

Terminals, with rules where they appear

'                    : 14 23
(                    : 50 51 52 53 58 61 62 63
)                    : 50 51 52 53 58 61 62 63
*                    : 30
+                    : 28 54
,                    : 18 19 20 27
-                    : 29 55
/                    : 31
:                    : 64
;                    : 3 8 9 10 65 66
=                    : 40 64
ADDASSIGN            : 36
BREAK                : 9
COMMENT              : 
CONTINUE             : 10
DIVASSIGN            : 39
DOTADD               : 32
DOTDIV               : 35
DOTMUL               : 34
DOTSUB               : 33
ELSE                 : 62
EQ                   : 46
EYE                  : 51
FLOATNUM             : 13
FOR                  : 64
GE                   : 44
GT                   : 42
ID                   : 14 15 59 60 64
IF                   : 61 62
INTNUM               : 12
LE                   : 43
LT                   : 41
MULASSIGN            : 38
NE                   : 45
ONES                 : 53
PRINT                : 65
RETURN               : 66
STRING               : 16
SUBASSIGN            : 37
WHILE                : 63
ZEROS                : 52
[                    : 19 20 20 21 22 60
]                    : 19 20 20 21 22 60
error                : 
{                    : 1
}                    : 1

Nonterminals, with rules where they appear

ARITHMETIC_OP        : 49
ARITHMETIC_OP_UNAR   : 48 56 56
ARTHMETIC_EXP        : 48 49 49 50 51 52 53 57 57 59 60 64 64
ASSIGN_EXP           : 3
ASSIGN_OP            : 59 60
FOR_INSTR            : 6
IF_INSTR             : 4
LIST_VALUE           : 27 60 65 66
LIST_VALUE_SINGLE    : 18 19 20 20 22
MATRIX               : 23 25
MATRIX_ROW_LIST      : 19 21
PRINT_FUN            : 7
RELATION_EXP         : 58 61 62 63
RELATION_OP          : 57
RETURN_FUN           : 8
START                : 1 2 2 61 62 62 63 64 0
VALUE                : 26 27 47
VALUE_SINGLE         : 17 18 24
WHILE_INSTR          : 5
empty                : 

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> . { START }
    (2) START -> . START START
    (3) START -> . ASSIGN_EXP ;
    (4) START -> . IF_INSTR
    (5) START -> . WHILE_INSTR
    (6) START -> . FOR_INSTR
    (7) START -> . PRINT_FUN
    (8) START -> . RETURN_FUN ;
    (9) START -> . BREAK ;
    (10) START -> . CONTINUE ;
    (59) ASSIGN_EXP -> . ID ASSIGN_OP ARTHMETIC_EXP
    (60) ASSIGN_EXP -> . ID [ LIST_VALUE ] ASSIGN_OP ARTHMETIC_EXP
    (61) IF_INSTR -> . IF ( RELATION_EXP ) START
    (62) IF_INSTR -> . IF ( RELATION_EXP ) START ELSE START
    (63) WHILE_INSTR -> . WHILE ( RELATION_EXP ) START
    (64) FOR_INSTR -> . FOR ID = ARTHMETIC_EXP : ARTHMETIC_EXP START
    (65) PRINT_FUN -> . PRINT LIST_VALUE ;
    (66) RETURN_FUN -> . RETURN LIST_VALUE ;

    {               shift and go to state 2
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 15
    RETURN          shift and go to state 16

    START                          shift and go to state 1
    ASSIGN_EXP                     shift and go to state 3
    IF_INSTR                       shift and go to state 4
    WHILE_INSTR                    shift and go to state 5
    FOR_INSTR                      shift and go to state 6
    PRINT_FUN                      shift and go to state 7
    RETURN_FUN                     shift and go to state 8

state 1

    (0) S' -> START .
    (2) START -> START . START
    (1) START -> . { START }
    (2) START -> . START START
    (3) START -> . ASSIGN_EXP ;
    (4) START -> . IF_INSTR
    (5) START -> . WHILE_INSTR
    (6) START -> . FOR_INSTR
    (7) START -> . PRINT_FUN
    (8) START -> . RETURN_FUN ;
    (9) START -> . BREAK ;
    (10) START -> . CONTINUE ;
    (59) ASSIGN_EXP -> . ID ASSIGN_OP ARTHMETIC_EXP
    (60) ASSIGN_EXP -> . ID [ LIST_VALUE ] ASSIGN_OP ARTHMETIC_EXP
    (61) IF_INSTR -> . IF ( RELATION_EXP ) START
    (62) IF_INSTR -> . IF ( RELATION_EXP ) START ELSE START
    (63) WHILE_INSTR -> . WHILE ( RELATION_EXP ) START
    (64) FOR_INSTR -> . FOR ID = ARTHMETIC_EXP : ARTHMETIC_EXP START
    (65) PRINT_FUN -> . PRINT LIST_VALUE ;
    (66) RETURN_FUN -> . RETURN LIST_VALUE ;

    {               shift and go to state 2
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 15
    RETURN          shift and go to state 16

    START                          shift and go to state 17
    ASSIGN_EXP                     shift and go to state 3
    IF_INSTR                       shift and go to state 4
    WHILE_INSTR                    shift and go to state 5
    FOR_INSTR                      shift and go to state 6
    PRINT_FUN                      shift and go to state 7
    RETURN_FUN                     shift and go to state 8

state 2

    (1) START -> { . START }
    (1) START -> . { START }
    (2) START -> . START START
    (3) START -> . ASSIGN_EXP ;
    (4) START -> . IF_INSTR
    (5) START -> . WHILE_INSTR
    (6) START -> . FOR_INSTR
    (7) START -> . PRINT_FUN
    (8) START -> . RETURN_FUN ;
    (9) START -> . BREAK ;
    (10) START -> . CONTINUE ;
    (59) ASSIGN_EXP -> . ID ASSIGN_OP ARTHMETIC_EXP
    (60) ASSIGN_EXP -> . ID [ LIST_VALUE ] ASSIGN_OP ARTHMETIC_EXP
    (61) IF_INSTR -> . IF ( RELATION_EXP ) START
    (62) IF_INSTR -> . IF ( RELATION_EXP ) START ELSE START
    (63) WHILE_INSTR -> . WHILE ( RELATION_EXP ) START
    (64) FOR_INSTR -> . FOR ID = ARTHMETIC_EXP : ARTHMETIC_EXP START
    (65) PRINT_FUN -> . PRINT LIST_VALUE ;
    (66) RETURN_FUN -> . RETURN LIST_VALUE ;

    {               shift and go to state 2
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 15
    RETURN          shift and go to state 16

    START                          shift and go to state 18
    ASSIGN_EXP                     shift and go to state 3
    IF_INSTR                       shift and go to state 4
    WHILE_INSTR                    shift and go to state 5
    FOR_INSTR                      shift and go to state 6
    PRINT_FUN                      shift and go to state 7
    RETURN_FUN                     shift and go to state 8

state 3

    (3) START -> ASSIGN_EXP . ;

    ;               shift and go to state 19


state 4

    (4) START -> IF_INSTR .

    {               reduce using rule 4 (START -> IF_INSTR .)
    BREAK           reduce using rule 4 (START -> IF_INSTR .)
    CONTINUE        reduce using rule 4 (START -> IF_INSTR .)
    ID              reduce using rule 4 (START -> IF_INSTR .)
    IF              reduce using rule 4 (START -> IF_INSTR .)
    WHILE           reduce using rule 4 (START -> IF_INSTR .)
    FOR             reduce using rule 4 (START -> IF_INSTR .)
    PRINT           reduce using rule 4 (START -> IF_INSTR .)
    RETURN          reduce using rule 4 (START -> IF_INSTR .)
    $end            reduce using rule 4 (START -> IF_INSTR .)
    }               reduce using rule 4 (START -> IF_INSTR .)
    ELSE            reduce using rule 4 (START -> IF_INSTR .)


state 5

    (5) START -> WHILE_INSTR .

    {               reduce using rule 5 (START -> WHILE_INSTR .)
    BREAK           reduce using rule 5 (START -> WHILE_INSTR .)
    CONTINUE        reduce using rule 5 (START -> WHILE_INSTR .)
    ID              reduce using rule 5 (START -> WHILE_INSTR .)
    IF              reduce using rule 5 (START -> WHILE_INSTR .)
    WHILE           reduce using rule 5 (START -> WHILE_INSTR .)
    FOR             reduce using rule 5 (START -> WHILE_INSTR .)
    PRINT           reduce using rule 5 (START -> WHILE_INSTR .)
    RETURN          reduce using rule 5 (START -> WHILE_INSTR .)
    $end            reduce using rule 5 (START -> WHILE_INSTR .)
    }               reduce using rule 5 (START -> WHILE_INSTR .)
    ELSE            reduce using rule 5 (START -> WHILE_INSTR .)


state 6

    (6) START -> FOR_INSTR .

    {               reduce using rule 6 (START -> FOR_INSTR .)
    BREAK           reduce using rule 6 (START -> FOR_INSTR .)
    CONTINUE        reduce using rule 6 (START -> FOR_INSTR .)
    ID              reduce using rule 6 (START -> FOR_INSTR .)
    IF              reduce using rule 6 (START -> FOR_INSTR .)
    WHILE           reduce using rule 6 (START -> FOR_INSTR .)
    FOR             reduce using rule 6 (START -> FOR_INSTR .)
    PRINT           reduce using rule 6 (START -> FOR_INSTR .)
    RETURN          reduce using rule 6 (START -> FOR_INSTR .)
    $end            reduce using rule 6 (START -> FOR_INSTR .)
    }               reduce using rule 6 (START -> FOR_INSTR .)
    ELSE            reduce using rule 6 (START -> FOR_INSTR .)


state 7

    (7) START -> PRINT_FUN .

    {               reduce using rule 7 (START -> PRINT_FUN .)
    BREAK           reduce using rule 7 (START -> PRINT_FUN .)
    CONTINUE        reduce using rule 7 (START -> PRINT_FUN .)
    ID              reduce using rule 7 (START -> PRINT_FUN .)
    IF              reduce using rule 7 (START -> PRINT_FUN .)
    WHILE           reduce using rule 7 (START -> PRINT_FUN .)
    FOR             reduce using rule 7 (START -> PRINT_FUN .)
    PRINT           reduce using rule 7 (START -> PRINT_FUN .)
    RETURN          reduce using rule 7 (START -> PRINT_FUN .)
    $end            reduce using rule 7 (START -> PRINT_FUN .)
    }               reduce using rule 7 (START -> PRINT_FUN .)
    ELSE            reduce using rule 7 (START -> PRINT_FUN .)


state 8

    (8) START -> RETURN_FUN . ;

    ;               shift and go to state 20


state 9

    (9) START -> BREAK . ;

    ;               shift and go to state 21


state 10

    (10) START -> CONTINUE . ;

    ;               shift and go to state 22


state 11

    (59) ASSIGN_EXP -> ID . ASSIGN_OP ARTHMETIC_EXP
    (60) ASSIGN_EXP -> ID . [ LIST_VALUE ] ASSIGN_OP ARTHMETIC_EXP
    (36) ASSIGN_OP -> . ADDASSIGN
    (37) ASSIGN_OP -> . SUBASSIGN
    (38) ASSIGN_OP -> . MULASSIGN
    (39) ASSIGN_OP -> . DIVASSIGN
    (40) ASSIGN_OP -> . =

    [               shift and go to state 24
    ADDASSIGN       shift and go to state 25
    SUBASSIGN       shift and go to state 26
    MULASSIGN       shift and go to state 27
    DIVASSIGN       shift and go to state 28
    =               shift and go to state 29

    ASSIGN_OP                      shift and go to state 23

state 12

    (61) IF_INSTR -> IF . ( RELATION_EXP ) START
    (62) IF_INSTR -> IF . ( RELATION_EXP ) START ELSE START

    (               shift and go to state 30


state 13

    (63) WHILE_INSTR -> WHILE . ( RELATION_EXP ) START

    (               shift and go to state 31


state 14

    (64) FOR_INSTR -> FOR . ID = ARTHMETIC_EXP : ARTHMETIC_EXP START

    ID              shift and go to state 32


state 15

    (65) PRINT_FUN -> PRINT . LIST_VALUE ;
    (26) LIST_VALUE -> . VALUE
    (27) LIST_VALUE -> . VALUE , LIST_VALUE
    (24) VALUE -> . VALUE_SINGLE
    (25) VALUE -> . MATRIX
    (12) VALUE_SINGLE -> . INTNUM
    (13) VALUE_SINGLE -> . FLOATNUM
    (14) VALUE_SINGLE -> . ID '
    (15) VALUE_SINGLE -> . ID
    (16) VALUE_SINGLE -> . STRING
    (21) MATRIX -> . [ MATRIX_ROW_LIST ]
    (22) MATRIX -> . [ LIST_VALUE_SINGLE ]
    (23) MATRIX -> . MATRIX '

    INTNUM          shift and go to state 37
    FLOATNUM        shift and go to state 38
    ID              shift and go to state 39
    STRING          shift and go to state 40
    [               shift and go to state 41

    LIST_VALUE                     shift and go to state 33
    VALUE                          shift and go to state 34
    VALUE_SINGLE                   shift and go to state 35
    MATRIX                         shift and go to state 36

state 16

    (66) RETURN_FUN -> RETURN . LIST_VALUE ;
    (26) LIST_VALUE -> . VALUE
    (27) LIST_VALUE -> . VALUE , LIST_VALUE
    (24) VALUE -> . VALUE_SINGLE
    (25) VALUE -> . MATRIX
    (12) VALUE_SINGLE -> . INTNUM
    (13) VALUE_SINGLE -> . FLOATNUM
    (14) VALUE_SINGLE -> . ID '
    (15) VALUE_SINGLE -> . ID
    (16) VALUE_SINGLE -> . STRING
    (21) MATRIX -> . [ MATRIX_ROW_LIST ]
    (22) MATRIX -> . [ LIST_VALUE_SINGLE ]
    (23) MATRIX -> . MATRIX '

    INTNUM          shift and go to state 37
    FLOATNUM        shift and go to state 38
    ID              shift and go to state 39
    STRING          shift and go to state 40
    [               shift and go to state 41

    LIST_VALUE                     shift and go to state 42
    VALUE                          shift and go to state 34
    VALUE_SINGLE                   shift and go to state 35
    MATRIX                         shift and go to state 36

state 17

    (2) START -> START START .
    (2) START -> START . START
    (1) START -> . { START }
    (2) START -> . START START
    (3) START -> . ASSIGN_EXP ;
    (4) START -> . IF_INSTR
    (5) START -> . WHILE_INSTR
    (6) START -> . FOR_INSTR
    (7) START -> . PRINT_FUN
    (8) START -> . RETURN_FUN ;
    (9) START -> . BREAK ;
    (10) START -> . CONTINUE ;
    (59) ASSIGN_EXP -> . ID ASSIGN_OP ARTHMETIC_EXP
    (60) ASSIGN_EXP -> . ID [ LIST_VALUE ] ASSIGN_OP ARTHMETIC_EXP
    (61) IF_INSTR -> . IF ( RELATION_EXP ) START
    (62) IF_INSTR -> . IF ( RELATION_EXP ) START ELSE START
    (63) WHILE_INSTR -> . WHILE ( RELATION_EXP ) START
    (64) FOR_INSTR -> . FOR ID = ARTHMETIC_EXP : ARTHMETIC_EXP START
    (65) PRINT_FUN -> . PRINT LIST_VALUE ;
    (66) RETURN_FUN -> . RETURN LIST_VALUE ;

  ! shift/reduce conflict for { resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    $end            reduce using rule 2 (START -> START START .)
    }               reduce using rule 2 (START -> START START .)
    ELSE            reduce using rule 2 (START -> START START .)
    {               shift and go to state 2
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 15
    RETURN          shift and go to state 16

  ! {               [ reduce using rule 2 (START -> START START .) ]
  ! BREAK           [ reduce using rule 2 (START -> START START .) ]
  ! CONTINUE        [ reduce using rule 2 (START -> START START .) ]
  ! ID              [ reduce using rule 2 (START -> START START .) ]
  ! IF              [ reduce using rule 2 (START -> START START .) ]
  ! WHILE           [ reduce using rule 2 (START -> START START .) ]
  ! FOR             [ reduce using rule 2 (START -> START START .) ]
  ! PRINT           [ reduce using rule 2 (START -> START START .) ]
  ! RETURN          [ reduce using rule 2 (START -> START START .) ]

    START                          shift and go to state 17
    ASSIGN_EXP                     shift and go to state 3
    IF_INSTR                       shift and go to state 4
    WHILE_INSTR                    shift and go to state 5
    FOR_INSTR                      shift and go to state 6
    PRINT_FUN                      shift and go to state 7
    RETURN_FUN                     shift and go to state 8

state 18

    (1) START -> { START . }
    (2) START -> START . START
    (1) START -> . { START }
    (2) START -> . START START
    (3) START -> . ASSIGN_EXP ;
    (4) START -> . IF_INSTR
    (5) START -> . WHILE_INSTR
    (6) START -> . FOR_INSTR
    (7) START -> . PRINT_FUN
    (8) START -> . RETURN_FUN ;
    (9) START -> . BREAK ;
    (10) START -> . CONTINUE ;
    (59) ASSIGN_EXP -> . ID ASSIGN_OP ARTHMETIC_EXP
    (60) ASSIGN_EXP -> . ID [ LIST_VALUE ] ASSIGN_OP ARTHMETIC_EXP
    (61) IF_INSTR -> . IF ( RELATION_EXP ) START
    (62) IF_INSTR -> . IF ( RELATION_EXP ) START ELSE START
    (63) WHILE_INSTR -> . WHILE ( RELATION_EXP ) START
    (64) FOR_INSTR -> . FOR ID = ARTHMETIC_EXP : ARTHMETIC_EXP START
    (65) PRINT_FUN -> . PRINT LIST_VALUE ;
    (66) RETURN_FUN -> . RETURN LIST_VALUE ;

    }               shift and go to state 43
    {               shift and go to state 2
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 15
    RETURN          shift and go to state 16

    START                          shift and go to state 17
    ASSIGN_EXP                     shift and go to state 3
    IF_INSTR                       shift and go to state 4
    WHILE_INSTR                    shift and go to state 5
    FOR_INSTR                      shift and go to state 6
    PRINT_FUN                      shift and go to state 7
    RETURN_FUN                     shift and go to state 8

state 19

    (3) START -> ASSIGN_EXP ; .

    {               reduce using rule 3 (START -> ASSIGN_EXP ; .)
    BREAK           reduce using rule 3 (START -> ASSIGN_EXP ; .)
    CONTINUE        reduce using rule 3 (START -> ASSIGN_EXP ; .)
    ID              reduce using rule 3 (START -> ASSIGN_EXP ; .)
    IF              reduce using rule 3 (START -> ASSIGN_EXP ; .)
    WHILE           reduce using rule 3 (START -> ASSIGN_EXP ; .)
    FOR             reduce using rule 3 (START -> ASSIGN_EXP ; .)
    PRINT           reduce using rule 3 (START -> ASSIGN_EXP ; .)
    RETURN          reduce using rule 3 (START -> ASSIGN_EXP ; .)
    $end            reduce using rule 3 (START -> ASSIGN_EXP ; .)
    }               reduce using rule 3 (START -> ASSIGN_EXP ; .)
    ELSE            reduce using rule 3 (START -> ASSIGN_EXP ; .)


state 20

    (8) START -> RETURN_FUN ; .

    {               reduce using rule 8 (START -> RETURN_FUN ; .)
    BREAK           reduce using rule 8 (START -> RETURN_FUN ; .)
    CONTINUE        reduce using rule 8 (START -> RETURN_FUN ; .)
    ID              reduce using rule 8 (START -> RETURN_FUN ; .)
    IF              reduce using rule 8 (START -> RETURN_FUN ; .)
    WHILE           reduce using rule 8 (START -> RETURN_FUN ; .)
    FOR             reduce using rule 8 (START -> RETURN_FUN ; .)
    PRINT           reduce using rule 8 (START -> RETURN_FUN ; .)
    RETURN          reduce using rule 8 (START -> RETURN_FUN ; .)
    $end            reduce using rule 8 (START -> RETURN_FUN ; .)
    }               reduce using rule 8 (START -> RETURN_FUN ; .)
    ELSE            reduce using rule 8 (START -> RETURN_FUN ; .)


state 21

    (9) START -> BREAK ; .

    {               reduce using rule 9 (START -> BREAK ; .)
    BREAK           reduce using rule 9 (START -> BREAK ; .)
    CONTINUE        reduce using rule 9 (START -> BREAK ; .)
    ID              reduce using rule 9 (START -> BREAK ; .)
    IF              reduce using rule 9 (START -> BREAK ; .)
    WHILE           reduce using rule 9 (START -> BREAK ; .)
    FOR             reduce using rule 9 (START -> BREAK ; .)
    PRINT           reduce using rule 9 (START -> BREAK ; .)
    RETURN          reduce using rule 9 (START -> BREAK ; .)
    $end            reduce using rule 9 (START -> BREAK ; .)
    }               reduce using rule 9 (START -> BREAK ; .)
    ELSE            reduce using rule 9 (START -> BREAK ; .)


state 22

    (10) START -> CONTINUE ; .

    {               reduce using rule 10 (START -> CONTINUE ; .)
    BREAK           reduce using rule 10 (START -> CONTINUE ; .)
    CONTINUE        reduce using rule 10 (START -> CONTINUE ; .)
    ID              reduce using rule 10 (START -> CONTINUE ; .)
    IF              reduce using rule 10 (START -> CONTINUE ; .)
    WHILE           reduce using rule 10 (START -> CONTINUE ; .)
    FOR             reduce using rule 10 (START -> CONTINUE ; .)
    PRINT           reduce using rule 10 (START -> CONTINUE ; .)
    RETURN          reduce using rule 10 (START -> CONTINUE ; .)
    $end            reduce using rule 10 (START -> CONTINUE ; .)
    }               reduce using rule 10 (START -> CONTINUE ; .)
    ELSE            reduce using rule 10 (START -> CONTINUE ; .)


state 23

    (59) ASSIGN_EXP -> ID ASSIGN_OP . ARTHMETIC_EXP
    (47) ARTHMETIC_EXP -> . VALUE
    (48) ARTHMETIC_EXP -> . ARITHMETIC_OP_UNAR ARTHMETIC_EXP
    (49) ARTHMETIC_EXP -> . ARTHMETIC_EXP ARITHMETIC_OP ARTHMETIC_EXP
    (50) ARTHMETIC_EXP -> . ( ARTHMETIC_EXP )
    (51) ARTHMETIC_EXP -> . EYE ( ARTHMETIC_EXP )
    (52) ARTHMETIC_EXP -> . ZEROS ( ARTHMETIC_EXP )
    (53) ARTHMETIC_EXP -> . ONES ( ARTHMETIC_EXP )
    (24) VALUE -> . VALUE_SINGLE
    (25) VALUE -> . MATRIX
    (54) ARITHMETIC_OP_UNAR -> . +
    (55) ARITHMETIC_OP_UNAR -> . -
    (56) ARITHMETIC_OP_UNAR -> . ARITHMETIC_OP_UNAR ARITHMETIC_OP_UNAR
    (12) VALUE_SINGLE -> . INTNUM
    (13) VALUE_SINGLE -> . FLOATNUM
    (14) VALUE_SINGLE -> . ID '
    (15) VALUE_SINGLE -> . ID
    (16) VALUE_SINGLE -> . STRING
    (21) MATRIX -> . [ MATRIX_ROW_LIST ]
    (22) MATRIX -> . [ LIST_VALUE_SINGLE ]
    (23) MATRIX -> . MATRIX '

    (               shift and go to state 47
    EYE             shift and go to state 48
    ZEROS           shift and go to state 49
    ONES            shift and go to state 50
    +               shift and go to state 51
    -               shift and go to state 52
    INTNUM          shift and go to state 37
    FLOATNUM        shift and go to state 38
    ID              shift and go to state 39
    STRING          shift and go to state 40
    [               shift and go to state 41

    ARTHMETIC_EXP                  shift and go to state 44
    VALUE                          shift and go to state 45
    ARITHMETIC_OP_UNAR             shift and go to state 46
    VALUE_SINGLE                   shift and go to state 35
    MATRIX                         shift and go to state 36

state 24

    (60) ASSIGN_EXP -> ID [ . LIST_VALUE ] ASSIGN_OP ARTHMETIC_EXP
    (26) LIST_VALUE -> . VALUE
    (27) LIST_VALUE -> . VALUE , LIST_VALUE
    (24) VALUE -> . VALUE_SINGLE
    (25) VALUE -> . MATRIX
    (12) VALUE_SINGLE -> . INTNUM
    (13) VALUE_SINGLE -> . FLOATNUM
    (14) VALUE_SINGLE -> . ID '
    (15) VALUE_SINGLE -> . ID
    (16) VALUE_SINGLE -> . STRING
    (21) MATRIX -> . [ MATRIX_ROW_LIST ]
    (22) MATRIX -> . [ LIST_VALUE_SINGLE ]
    (23) MATRIX -> . MATRIX '

    INTNUM          shift and go to state 37
    FLOATNUM        shift and go to state 38
    ID              shift and go to state 39
    STRING          shift and go to state 40
    [               shift and go to state 41

    LIST_VALUE                     shift and go to state 53
    VALUE                          shift and go to state 34
    VALUE_SINGLE                   shift and go to state 35
    MATRIX                         shift and go to state 36

state 25

    (36) ASSIGN_OP -> ADDASSIGN .

    (               reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    EYE             reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    ZEROS           reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    ONES            reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    +               reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    -               reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    INTNUM          reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    FLOATNUM        reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    ID              reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    STRING          reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)
    [               reduce using rule 36 (ASSIGN_OP -> ADDASSIGN .)


state 26

    (37) ASSIGN_OP -> SUBASSIGN .

    (               reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    EYE             reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    ZEROS           reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    ONES            reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    +               reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    -               reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    INTNUM          reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    FLOATNUM        reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    ID              reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    STRING          reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)
    [               reduce using rule 37 (ASSIGN_OP -> SUBASSIGN .)


state 27

    (38) ASSIGN_OP -> MULASSIGN .

    (               reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    EYE             reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    ZEROS           reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    ONES            reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    +               reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    -               reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    INTNUM          reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    FLOATNUM        reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    ID              reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    STRING          reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)
    [               reduce using rule 38 (ASSIGN_OP -> MULASSIGN .)


state 28

    (39) ASSIGN_OP -> DIVASSIGN .
